[package]
name = "error-measures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
polars = { version = "0.25.1", features = ["lazy", "json", "dtype-full", "describe"] }
rayon = "1.5.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
